@@ -151,7 +151,7 @@
     <Compile Include="Collections\Show.cs" />
     <Compile Include="Collections\Tv.cs" />
     <Compile Include="Configuration\CfgXmlHelperFixture.cs" />
-    <Compile Include="Configuration\ConfigurationFixture.cs" />
+    <Compile Include="Configuration\XmlConfigurationFixture.cs" />
     <Compile Include="Base\Contact.cs" />
     <Compile Include="CustomValidator\BadValidator.cs" />
     <Compile Include="CustomValidator\BadValidatorFixture.cs" />
